# sorcery-server

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  fly.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: deploy.yml
dev/: remote-links-spec.md  repo-links.md  server-spec.md  testbed.html
src/: csp.rs  lib.rs  main.rs  subdomain.rs
src/parsing/: mod.rs
src/routes/: mod.rs  open.rs  passthrough.rs  provider.rs  templates.rs  wellknown.rs
src/static/: app.js
src/templates/: error.html  landing.html  mirror.html  open.html  provider.html
src/tenant/: config.rs  mod.rs
tasks/: web-editor-ide-support.md
tests/: integration_tests.rs
